# slime-manifold

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
data/configs/: BunnyAlpha.ini  BunnyObstacleSpecies3.ini  BunnySpecies3.ini  Fertility001.ini  Fertility002.ini  Fertility003.ini  Fertility004.ini  Growth.ini  IcosahedronNoRescale.ini  Moebius.ini  Sphere.ini  Test000.ini  TestMultiStep0001.ini  TestMultiStep0010.ini  TestMultiStep0100.ini  TestMultiStep1000.ini  ThankYouAlt.ini  Torus.ini  UVSpecies2Obstacle.ini
data/meshes/: default.light
data/shaders/: Base.frag  Base.vert  DiffuseTrail3D.compute  DiffuseTrail3D.compute.include  InitAgents3D.compute  InitAgents3D.compute.include  MixDiffuse.frag  SimpleSlime3D.frag  Textured.frag  TexturedObstacle.frag  UpdatePos3D.compute  UpdatePos3D.compute.include
ext/glad/include/glad/: glad.h
ext/glad/src/: glad.c
include/mesh/: IO.hpp  Mesh.hpp
include/render/: GraphicShader.hpp  Material.hpp  MeshRenderEngine.hpp  RenderEngine.hpp  TextureRenderEngine.hpp
include/slime/: SimulationParameters.hpp  SlimeExporter.hpp  SlimeSim3D.hpp
include/utils/: CUDAUtils.h
src/: slime3d.cpp  slime3dinitmap.cpp  slime3dobstacle.cpp  stb_image.cpp
src/mesh/: IO.cpp  Mesh.cpp
src/render/: GraphicShader.cpp  Material.cpp  MeshRenderEngine.cpp  RenderEngine.cpp
src/slime/: DiffuseTrail3D.cu  InitAgents3D.cu  RandNoise.cu  SimulationParameters.cpp  SlimeExporter.cpp  SlimeExporter.cu  SlimeSim3D.cpp  UpdatePos3D.cu
